# Learning3DS

./: 3ds-toolchain.cmake  CMakeLists.txt
archive/: ImageDisplay.cpp  print.cpp
romfs/: image.t3x
src/: main.cpp
